--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<app-nova-transferencia (aoTransferir)="transferir($event)"></app-nova-transferencia>
+<app-new-transfer (whenSend)="send($event)"></app-new-transfer>
 
-<p>Valor: {{ transferencia?.valor }}</p>
-<p>Destino: {{ transferencia?.destino }}</p>
+<app-extrato [transfers]="transfers"></app-extrato>
