adding transfer service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-new-transfer (whenSend)="send($event)"></app-new-transfer>
 
-<app-extrato [transfers]="transfers"></app-extrato>
+<app-extrato></app-extrato>
