--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<header>
+  <a routerLink="extract">Bytebank</a>
+  <a routerLink="new-transfer" routerLinkActive="active">Nova Transferência</a>
+</header>
+<main>
+  <router-outlet></router-outlet>
+</main>
