--- a/src/app/pages/extract/extract.component.html
+++ b/src/app/pages/extract/extract.component.html
@@ -1,22 +1,36 @@
 <section class="container">
-  <h2 class="title">Transferências</h2>
-  <table class="table">
-    <thead class="table__header">
-      <th class="table__header__content">Data</th>
-      <th class="table__header__content">Valor</th>
-      <th class="table__header__content">Destino</th>
-    </thead>
-    <tbody *ngIf="transfers?.length > 0; else emptyList">
-      <tr class="table__line" *ngFor="let transfer of transfers">
-        <td class="table__content">{{ transfer.date | date: "short" }}</td>
-        <td class="table__content">{{ transfer.value }}</td>
-        <td class="table__content">{{ transfer.destiny }}</td>
-      </tr>
-    </tbody>
-  </table>
-
-  <ng-template #emptyList>
-    <p>Nenhuma operação cadastrada</p>
-  </ng-template>
+  <div class="container__databank">
+    <div class="databank">
+      <div class="databank__content">
+        <p>Titular: QI SCD S.A</p>
+        <p>Documento: 04.094.615/0001-85</p>
+      </div>
+      <div class="databank__content">
+        <p>Instituição: 329 - QI Sociedade de Crédito Direto</p>
+        <p>Agência: 0001</p>
+      </div>
+    </div>
+  </div>
+  <div class="container__table">
+    <div class="container__table__scroll">
+      <table class="table">
+        <thead class="table__header">
+          <th class="table__header__content">Data</th>
+          <th class="table__header__content">Destino</th>
+          <th class="table__header__content">Valor (em R$)</th>
+        </thead>
+        <tbody class="table__body" *ngIf="transfers?.length > 0;">
+          <tr class="table__line" *ngFor="let transfer of transfers">
+            <td class="table__content">{{ transfer.date | date: "short" }}</td>
+            <td class="table__content">{{ transfer.destiny }}</td>
+            <td class="table__content">{{ transfer.value | currency: 'BRL':true }}</td>
+          </tr>
+        </tbody>
+      </table>
+      <div class="table__empty" *ngIf="!transfers?.length">
+        <p>Nenhuma operação cadastrada</p>
+      </div>
+    </div>
+  </div>
 </section>
 
