--- a/src/app/pages/new-transfer/new-transfer.component.html
+++ b/src/app/pages/new-transfer/new-transfer.component.html
@@ -1,19 +1,24 @@
 <section class="container">
-  <form class="form" (ngSubmit)="send()">
-    <h2 class="form__title">Nova Transferência</h2>
-
-    <div class="form-field">
-      <label class="form-field__label" for="value">Valor</label>
-      <input class="form-field__input" id="value" type="number" [(ngModel)]="value" name="value"/>
+  <div class="container__info">
+    <div>
+      <p>Nova Transferência</p>
     </div>
+  </div>
+  <div class="container__form">
+    <form class="form" (ngSubmit)="send()">
+      <div class="form-field">
+        <label class="form-field__label" for="value">Valor</label>
+        <input class="form-field__input" id="value" type="text" [(ngModel)]="value" name="value" mask="separator.2" thousandSeparator="." />
+      </div>
 
-    <div class="form-field">
-      <label class="form-field__label" for="destiny">Destino</label>
-      <input class="form-field__input" id="destiny" type="text" [(ngModel)]="destiny" name="destiny" />
-    </div>
+      <div class="form-field">
+        <label class="form-field__label" for="destiny">Destino</label>
+        <input class="form-field__input" id="destiny" type="text" [(ngModel)]="destiny" name="destiny" mask="0000-0" />
+      </div>
 
-    <div class="button-wrapper">
-      <button class="button" type="submit">Transferir</button>
-    </div>
-  </form>
+      <div class="button-wrapper">
+        <button class="button" type="submit" [disabled]="!value || !destiny">Transferir</button>
+      </div>
+    </form>
+  </div>
 </section>
