--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,6 @@
   <router-outlet></router-outlet>
 </main>
 <footer>
-  <p>Qi Sociedade de Crédito S.A.</p>
+  <p>Bytebank S.A.</p>
 </footer>
 </div>
