--- a/src/app/pages/extract/extract.component.html
+++ b/src/app/pages/extract/extract.component.html
@@ -2,11 +2,11 @@
   <div class="container__databank">
     <div class="databank">
       <div class="databank__content">
-        <p>Titular: QI SCD S.A</p>
-        <p>Documento: 04.094.615/0001-85</p>
+        <p>Titular: Gabriel Menezes</p>
+        <p>Documento: 685.256.550-58</p>
       </div>
       <div class="databank__content">
-        <p>Instituição: 329 - QI Sociedade de Crédito Direto</p>
+        <p>Instituição: 329 - Bytebank S.A.</p>
         <p>Agência: 0001</p>
       </div>
     </div>
